# cam_gimbal

simple_bgc/: CMakeLists.txt  package.xml
simple_bgc/cfg/: Control.cfg
simple_bgc/include/simple_bgc/: simple_bgc_driver.h
simple_bgc/launch/: simple_bgc.launch
simple_bgc/src/: simple_bgc_driver.cpp  simple_bgc_node.cpp
